[project]
name = "learning-mujoco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "mediapy>=1.2.6",
    "mjlab>=1.3.0",
    "mujoco>=3.8.1",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages"]
include = ["navigation", "navigation.*"]

[project.entry-points."mjlab.tasks"]
navigation = "navigation"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
